<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_constraint"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_constraint"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_constraint"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_constraint"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98" />


    <TextView
        android:id="@+id/tv_game_result_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_activity_tv_result_title"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/start_constraint"
        app:layout_constraintTop_toTopOf="@id/top_constraint" />


    <TextView
        android:id="@+id/tv_card_section_a"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/card_section_background"
        android:includeFontPadding="false"
        android:padding="12dp"
        android:text="@string/card_section_A_text"
        android:textColor="@color/card_section_text_color"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/end_constraint"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="@id/start_constraint"
        app:layout_constraintTop_toBottomOf="@id/tv_game_result_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_card_section_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/card_section_background"
        app:layout_constraintBottom_toBottomOf="@id/tv_card_section_a"
        app:layout_constraintEnd_toEndOf="@id/end_constraint"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="@id/start_constraint"
        app:layout_constraintTop_toBottomOf="@id/tv_game_result_title" />


    <TextView
        android:id="@+id/tv_card_section_b"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/card_section_background"
        android:includeFontPadding="false"
        android:padding="12dp"
        android:text="@string/card_section_B_text"
        android:textColor="@color/card_section_text_color"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/end_constraint"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="@id/start_constraint"
        app:layout_constraintTop_toBottomOf="@id/tv_card_section_a" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_card_section_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/card_section_background"
        app:layout_constraintBottom_toBottomOf="@id/tv_card_section_b"
        app:layout_constraintEnd_toEndOf="@id/end_constraint"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="@id/start_constraint"
        app:layout_constraintTop_toBottomOf="@id/tv_card_section_a" />

    <TextView
        android:id="@+id/tv_card_section_c"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/card_section_background"
        android:includeFontPadding="false"
        android:padding="12dp"
        android:text="@string/card_section_C_text"
        android:textColor="@color/card_section_text_color"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/end_constraint"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="@id/start_constraint"
        app:layout_constraintTop_toBottomOf="@id/tv_card_section_b" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_card_section_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/card_section_background"
        app:layout_constraintBottom_toBottomOf="@id/tv_card_section_c"
        app:layout_constraintEnd_toEndOf="@id/end_constraint"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="@id/start_constraint"
        app:layout_constraintTop_toBottomOf="@id/tv_card_section_b" />


    <TextView
        android:id="@+id/tv_card_section_d"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/card_section_background"
        android:includeFontPadding="false"
        android:padding="12dp"
        android:text="@string/card_section_D_text"
        android:textColor="@color/card_section_text_color"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/end_constraint"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="@id/start_constraint"
        app:layout_constraintTop_toBottomOf="@id/tv_card_section_c" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_card_section_d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/card_section_background"
        app:layout_constraintBottom_toBottomOf="@id/tv_card_section_d"
        app:layout_constraintEnd_toEndOf="@id/end_constraint"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="@id/start_constraint"
        app:layout_constraintTop_toBottomOf="@id/tv_card_section_c" />

    <TextView
        android:id="@+id/tv_card_section_e"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/card_section_background"
        android:includeFontPadding="false"
        android:padding="12dp"
        android:text="@string/card_section_E_text"
        android:textColor="@color/card_section_text_color"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/end_constraint"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="@id/start_constraint"
        app:layout_constraintTop_toBottomOf="@id/tv_card_section_d" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_card_section_e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/card_section_background"
        app:layout_constraintBottom_toBottomOf="@id/tv_card_section_e"
        app:layout_constraintEnd_toEndOf="@id/end_constraint"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="@id/start_constraint"
        app:layout_constraintTop_toBottomOf="@id/tv_card_section_d" />

    <TextView
        android:id="@+id/tv_winner_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/result_activity_tv_winner_result"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/start_constraint"
        app:layout_constraintTop_toBottomOf="@id/tv_card_section_e" />


    <Button
        android:id="@+id/bt_restart"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:includeFontPadding="false"
        android:text="@string/result_activity_bt_restart"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>