<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_constraint"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_constraint"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_constraint"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_constraint"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98" />


    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/segbtn_select_num_of_player"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@id/end_constraint"
        app:layout_constraintStart_toStartOf="@+id/start_constraint"
        app:layout_constraintTop_toTopOf="@id/top_constraint"
        app:selectionRequired="true"
        app:singleSelection="true">

        <!-- layout.xml -->
        <Button
            android:id="@+id/bt_player_three"
            style="@style/PlayerNumSegmentedButtonStyle"
            android:text="@string/seg_btn_select_num_of_player_text_first"
            app:icon="@drawable/seg_btn_select_num_of_player_background" />

        <Button
            android:id="@+id/bt_player_four"
            style="@style/PlayerNumSegmentedButtonStyle"
            android:text="@string/seg_btn_select_num_of_player_text_second"
            app:icon="@drawable/seg_btn_select_num_of_player_background" />

        <Button
            android:id="@+id/bt_player_five"
            style="@style/PlayerNumSegmentedButtonStyle"
            android:text="@string/seg_btn_select_num_of_player_text_third"
            app:icon="@drawable/seg_btn_select_num_of_player_background" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <TextView
        android:id="@+id/tv_card_section_first"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/card_section_background"
        android:includeFontPadding="false"
        android:padding="12dp"
        android:text="@string/card_section_A_text"
        android:textColor="@color/card_section_text_color"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/end_constraint"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="@id/start_constraint"
        app:layout_constraintTop_toBottomOf="@id/segbtn_select_num_of_player" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_card_section_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/card_section_background"
        app:layout_constraintBottom_toBottomOf="@id/tv_card_section_first"
        app:layout_constraintEnd_toEndOf="@id/end_constraint"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="@id/start_constraint"
        app:layout_constraintTop_toBottomOf="@id/segbtn_select_num_of_player" />


    <TextView
        android:id="@+id/tv_card_section_second"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/card_section_background"
        android:includeFontPadding="false"
        android:padding="12dp"
        android:text="@string/card_section_B_text"
        android:textColor="@color/card_section_text_color"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/end_constraint"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="@id/start_constraint"
        app:layout_constraintTop_toBottomOf="@id/tv_card_section_first" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_card_section_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/card_section_background"
        app:layout_constraintBottom_toBottomOf="@id/tv_card_section_second"
        app:layout_constraintEnd_toEndOf="@id/end_constraint"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="@id/start_constraint"
        app:layout_constraintTop_toBottomOf="@id/tv_card_section_first" />

    <TextView
        android:id="@+id/tv_card_section_third"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/card_section_background"
        android:includeFontPadding="false"
        android:padding="12dp"
        android:text="@string/card_section_C_text"
        android:textColor="@color/card_section_text_color"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/end_constraint"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="@id/start_constraint"
        app:layout_constraintTop_toBottomOf="@id/tv_card_section_second" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_card_section_third"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/card_section_background"
        app:layout_constraintBottom_toBottomOf="@id/tv_card_section_third"
        app:layout_constraintEnd_toEndOf="@id/end_constraint"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="@id/start_constraint"
        app:layout_constraintTop_toBottomOf="@id/tv_card_section_second" />


    <TextView
        android:id="@+id/tv_card_section_fourth"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/card_section_background"
        android:includeFontPadding="false"
        android:padding="12dp"
        android:text="@string/card_section_D_text"
        android:textColor="@color/card_section_text_color"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/end_constraint"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="@id/start_constraint"
        app:layout_constraintTop_toBottomOf="@id/tv_card_section_third" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_card_section_fourth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/card_section_background"
        app:layout_constraintBottom_toBottomOf="@id/tv_card_section_fourth"
        app:layout_constraintEnd_toEndOf="@id/end_constraint"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="@id/start_constraint"
        app:layout_constraintTop_toBottomOf="@id/tv_card_section_third" />

    <TextView
        android:id="@+id/tv_card_section_fifth"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/card_section_background"
        android:includeFontPadding="false"
        android:padding="12dp"
        android:text="@string/card_section_E_text"
        android:textColor="@color/card_section_text_color"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/end_constraint"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="@id/start_constraint"
        app:layout_constraintTop_toBottomOf="@id/tv_card_section_fourth" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_card_section_fifth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/card_section_background"
        app:layout_constraintBottom_toBottomOf="@id/tv_card_section_fifth"
        app:layout_constraintEnd_toEndOf="@id/end_constraint"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="@id/start_constraint"
        app:layout_constraintTop_toBottomOf="@id/tv_card_section_fourth" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/bottom_section_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierAllowsGoneWidgets="false"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="tv_card_section_fourth,tv_card_section_fifth" />


    <View
        android:id="@+id/bottom_section"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bottom_card_section_background"
        app:layout_constraintBottom_toBottomOf="@id/bottom_constraint"
        app:layout_constraintEnd_toEndOf="@id/end_constraint"
        app:layout_constraintStart_toStartOf="@id/start_constraint"
        app:layout_constraintTop_toBottomOf="@id/bottom_section_barrier" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_card_shared"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/bottom_card_section_background"
        app:layout_constraintBottom_toBottomOf="@id/bottom_section"
        app:layout_constraintEnd_toEndOf="@id/end_constraint"
        app:layout_constraintStart_toStartOf="@id/start_constraint"
        app:layout_constraintTop_toBottomOf="@id/bottom_section_barrier" />

</androidx.constraintlayout.widget.ConstraintLayout>
